# marvis-rs

./: .env.example  .gitattributes  .gitignore  Cargo.toml  README.md  config.toml  task.md
.cargo/: config.toml
.claude/: settings.local.json
crates/marvis-agent/: Cargo.toml
crates/marvis-agent/src/: lib.rs  loop_.rs  orchestrator.rs  planner.rs
crates/marvis-ai/: Cargo.toml
crates/marvis-ai/src/: client.rs  deepseek.rs  lib.rs  mock.rs  qwen.rs  types.rs
crates/marvis-cli/: Cargo.toml
crates/marvis-cli/src/: args.rs  commands.rs  display.rs  main.rs  repl.rs
crates/marvis-core/: Cargo.toml
crates/marvis-core/src/: error.rs  lib.rs  tool.rs  types.rs
crates/marvis-security/: Cargo.toml
crates/marvis-security/src/: lib.rs  permissions.rs  sandbox.rs
crates/marvis-session/: Cargo.toml
crates/marvis-session/src/: context.rs  history.rs  lib.rs  storage.rs
crates/marvis-tools/: Cargo.toml
crates/marvis-tools/src/: clipboard.rs  file.rs  lib.rs  process.rs  registry.rs  system.rs  web.rs
marvis-app/: index.html  package-lock.json  package.json
marvis-app/src/: App.css  App.tsx  index.css
marvis-app/src-tauri/: Cargo.toml  tauri.conf.json
marvis-app/src-tauri/capabilities/: default.json
marvis-app/src-tauri/src/: commands.rs  lib.rs  main.rs
marvis-app/src/assets/lottie/: computer.json
marvis-app/src/components/: AgentAvatar.tsx  DeskComputer.tsx  Office.tsx  TaskLog.tsx  TokenBar.tsx  ZoneIcon.tsx
marvis-app/src/data/: agents.ts
marvis-app/src/hooks/: useAgentEvents.ts
marvis-app/src/types/: lottie.d.ts
target3/: .rustc_info.json
target3/release/.fingerprint/adler2-cdc1102173103f18/: lib-adler2  lib-adler2.json
target3/release/.fingerprint/ahash-0b1a34459665959a/: build-script-build-script-build  build-script-build-script-build.json
target3/release/.fingerprint/aho-corasick-a70a4266c5eba9b9/: lib-aho_corasick  lib-aho_corasick.json
target3/release/.fingerprint/alloc-no-stdlib-4a68b064d13ad12f/: lib-alloc_no_stdlib  lib-alloc_no_stdlib.json
target3/release/.fingerprint/alloc-stdlib-ddc11a54308cf94e/: lib-alloc_stdlib  lib-alloc_stdlib.json
target3/release/.fingerprint/anyhow-0087ee0b945bfba0/: build-script-build-script-build  build-script-build-script-build.json
target3/release/.fingerprint/anyhow-5d6078fcdf84a98d/: lib-anyhow  lib-anyhow.json
target3/release/.fingerprint/anyhow-d5846d09962ddce5/: run-build-script-build-script-build  run-build-script-build-script-build.json
target3/release/.fingerprint/async-trait-44b2c719171ceaf6/: lib-async_trait  lib-async_trait.json
target3/release/.fingerprint/autocfg-1825bae5a4224ddd/: lib-autocfg  lib-autocfg.json
target3/release/.fingerprint/base64-5a419a5dbedfbac5/: lib-base64  lib-base64.json
target3/release/.fingerprint/bit-set-5a94151731b47cf0/: lib-bit_set  lib-bit_set.json
target3/release/.fingerprint/bit-vec-df7e49e9bc51c071/: lib-bit_vec  lib-bit_vec.json
target3/release/.fingerprint/bitflags-a6d9e24838a1b61a/: lib-bitflags  lib-bitflags.json
target3/release/.fingerprint/bitflags-ec8f02c321ddb298/: lib-bitflags  lib-bitflags.json
target3/release/.fingerprint/block-buffer-1ef77ddd5ec19c2d/: lib-block_buffer  lib-block_buffer.json
target3/release/.fingerprint/brotli-decompressor-daa5d86b9a3feccf/: lib-brotli_decompressor  lib-brotli_decompressor.json
target3/release/.fingerprint/brotli-eb55859b2167809b/: lib-brotli  lib-brotli.json
target3/release/.fingerprint/byteorder-207f0116e0f759e3/: lib-byteorder  lib-byteorder.json
target3/release/.fingerprint/bytes-e41ef28ef77f766c/: lib-bytes  lib-bytes.json
target3/release/.fingerprint/camino-058c5e3c5e5a08e3/: build-script-build-script-build  build-script-build-script-build.json
target3/release/.fingerprint/camino-7401bf6b3b809bb9/: run-build-script-build-script-build  run-build-script-build-script-build.json
target3/release/.fingerprint/camino-7c3f29e7266f75b7/: lib-camino  lib-camino.json
target3/release/.fingerprint/cargo-platform-f9202f98bcb8045d/: lib-cargo_platform  lib-cargo_platform.json
target3/release/.fingerprint/cargo_metadata-2cf5eed32a6f38f1/: lib-cargo_metadata  lib-cargo_metadata.json
target3/release/.fingerprint/cargo_toml-3b48057198cd2442/: lib-cargo_toml  lib-cargo_toml.json
target3/release/.fingerprint/cfb-30f3c889725ce979/: lib-cfb  lib-cfb.json
target3/release/.fingerprint/cfg-if-8c1f6d2b9057fc72/: lib-cfg_if  lib-cfg_if.json
target3/release/.fingerprint/cookie-1b7302b38bdcd6b9/: build-script-build-script-build  build-script-build-script-build.json
target3/release/.fingerprint/cpufeatures-4dc75288df167dfe/: lib-cpufeatures  lib-cpufeatures.json
target3/release/.fingerprint/crc32fast-8c6096bd73a78a76/: lib-crc32fast  lib-crc32fast.json
target3/release/.fingerprint/crc32fast-dff5711ebbe20ad9/: build-script-build-script-build  build-script-build-script-build.json
target3/release/.fingerprint/crossbeam-utils-7f3c7a88c337a530/: build-script-build-script-build  build-script-build-script-build.json
target3/x86_64-pc-windows-gnu/release/: libmarvis_tauri_lib.d  marvis-tauri.d  marvis_tauri_lib.d
(+1119 files in other folders)
