[workspace]
members = [
    "crates/marvis-core",
    "crates/marvis-ai",
    "crates/marvis-tools",
    "crates/marvis-agent",
    "crates/marvis-session",
    "crates/marvis-security",
    "crates/marvis-cli",
    "marvis-app/src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Marvis Team"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Async trait
async-trait = "0.1"

# Stream utilities
futures = "0.3"
tokio-stream = "0.1"

# Configuration
toml = "0.8"
config = "0.14"

# Logging
log = "0.4"
env_logger = "0.11"

# System info (for process/system tools)
sysinfo = "0.32"

# HTML parsing (for web tools)
scraper = "0.20"

# Glob pattern matching
glob = "0.3"

# Terminal UI
crossterm = "0.28"
ratatui = "0.28"

# Clipboard
arboard = "3"

# URL handling
url = "2"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Chrono for timestamps
chrono = { version = "0.4", features = ["serde"] }

# Internal crates
marvis-core = { path = "crates/marvis-core" }
marvis-ai = { path = "crates/marvis-ai" }
marvis-tools = { path = "crates/marvis-tools" }
marvis-agent = { path = "crates/marvis-agent" }
marvis-session = { path = "crates/marvis-session" }
marvis-security = { path = "crates/marvis-security" }

[profile.release]
opt-level = 2
lto = false
strip = true
