[package]
name = "marvis-ai"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["deepseek"]
deepseek = []
qwen = []
mock = []

[dependencies]
marvis-core.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tokio.workspace = true
reqwest.workspace = true
futures.workspace = true
tokio-stream.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true
