[package]
name = "marvis-session"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
marvis-core.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true
tokio.workspace = true
log.workspace = true
