[package]
name = "marvis-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
marvis-core.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tokio.workspace = true
anyhow.workspace = true
sysinfo.workspace = true
scraper.workspace = true
reqwest.workspace = true
glob.workspace = true
url.workspace = true
arboard.workspace = true
chrono.workspace = true
uuid.workspace = true
